--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <p id="test">Hello.</p>
+<script id="testTemplate" type="text/x-handlebars-template">Example</script>
 </body>
 
 </html>
