--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,3 +1,23 @@
 body {
-	background-color: gray;
+	background-color: teal;
+    font:15px arial,sans-serif;
+}
+h1 {
+    margin: 0 0 10px 0;
+    padding: 5px;
+    font-size: 24px;
+    background-color: #000fff;
+    color: #fff;
+}
+.prev {
+    border: 2px solid black;
+    float: left;
+}
+.current {
+	border: 2px solid black;
+	float: center;
+}
+.next {
+	border: 2px solid black;
+	float: right;
 }
